--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-<meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://script.google.com;">
+<meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://script.google.com https://script.googleusercontent.com;">
 
     <title>くらむぼんのホームページ</title>
     <style>
