--- a/にゃんこ大戦争.html
+++ b/にゃんこ大戦争.html
@@ -25,6 +25,7 @@
 
     <!-- 4. OGP (Open Graph Protocol) - SNSでシェアされた際の表示設定 ※要変更 -->
     <!-- Facebook, LINEなどのSNSでページがシェアされた際に、どのように表示されるかを設定します -->
+     <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://script.google.com https://script.googleusercontent.com;">
     <meta property="og:title" content="【Luaコード生成】にゃんこ大戦争 ステータスエディタ v4.0">
     <meta property="og:description" content="検索パターン入力だけで、にゃんこ大戦争のステータスを変更するLuaスクリプトを簡単・自動生成。">
     <meta property="og:type" content="website">
