--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>くらむぼんのホームページ</title>
     <style>
         :root {
-            --primary-color: #98FB98; --secondary-color: #3CB371; --bg-color: #F0FFF0; --widget-bg: #fff; --text-color: #333; --radius: 12px; --shadow: 0 4px 8px rgba(0,0,0,0.1);
+            --primary-color: #98FB98;
+            /* ▼▼▼ 修正点1: コントラスト比改善のため、少し濃い緑に変更 ▼▼▼ */
+            --secondary-color: #2E8B57; /* MediumSeaGreen */
+            --bg-color: #F0FFF0;
+            --widget-bg: #fff;
+            --text-color: #333;
+            --radius: 12px;
+            --shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         body { font-family: 'Hiragino Kaku Gothic ProN', 'Meiryo', sans-serif; background-color: var(--bg-color); color: var(--text-color); margin: 0; padding: 20px; display: flex; justify-content: center; align-items: flex-start; min-height: 100vh; }
         #main-content { width: 100%; max-width: 800px; }
@@ -16,7 +23,7 @@
         h1, h2 { color: var(--secondary-color); border-bottom: 2px solid var(--primary-color); padding-bottom: 10px; margin-top: 0; }
         .top-nav { display: flex; flex-direction: column; gap: 15px; margin-top: 20px; }
         .nav-btn { padding: 15px; background-color: var(--secondary-color); color: white; text-decoration: none; text-align: center; font-weight: bold; border-radius: var(--radius); transition: background-color 0.3s, transform 0.2s; }
-        .nav-btn:hover { background-color: #2e8b57; transform: translateY(-2px); }
+        .nav-btn:hover { background-color: #256d45; transform: translateY(-2px); } /* ホバー色も調整 */
         .youtube-container { display: flex; align-items: center; gap: 20px; margin-top: 25px; }
         
         .youtube-link img {
@@ -62,7 +69,7 @@
             </div>
             <div class="youtube-container">
                 <a href="https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA?si=SZ7U0PjuVURPrfOl" target="_blank" class="youtube-link">
-                    <!-- ▼▼▼ 修正点: width/height属性を追加し、LCPの可能性を考慮してfetchpriorityを設定 ▼▼▼ -->
+                    <!-- ▼▼▼ 修正点2: LCPの変動に対応するため、両方の画像にfetchpriority="high"を設定 ▼▼▼ -->
                     <img src="チャンネルアイコン.jpg" alt="YouTubeチャンネルアイコン" width="200" height="200" fetchpriority="high">
                 </a>
                 <div class="explain">
@@ -90,8 +97,8 @@
             <h1>文章暗号化BOT</h1>
             <div class="youtube-container">
                 <a href="https://line.me/R/ti/p/@630pniaf" target="_blank" class="youtube-link">
-                    <!-- ▼▼▼ 修正点: width/height属性を追加し、LCPではない可能性を考慮して遅延読み込みを設定 ▼▼▼ -->
-                    <img src="暗号化BOTアイコン.jpg" alt="暗号化BOTアイコン" width="200" height="200" loading="lazy">
+                    <!-- ▼▼▼ 修正点2: LCPの変動に対応するため、両方の画像にfetchpriority="high"を設定 ▼▼▼ -->
+                    <img src="暗号化BOTアイコン.jpg" alt="暗号化BOTアイコン" width="200" height="200" fetchpriority="high">
                 </a>
                 <div class="explain">
                     <p>LINEで使える暗号化BOT</p>
