--- a/にゃんこ大戦争.html
+++ b/にゃんこ大戦争.html
@@ -15,6 +15,9 @@
 
     <!-- 1. 最適化されたタイトル: 検索エンジンの結果やブラウザのタブに表示されるページのタイトル -->
     <title>【Luaコード生成】にゃんこ大戦争 ステータスエディタ v4.0 | 簡単チートコード作成</title>
+    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
+    <!-- iPhoneやiPadでホーム画面に追加したとき用のアイコン -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
     <!-- 2. 検索結果に表示される説明文 (Meta Description): 検索結果スニペットに表示される短い要約 -->
     <meta name="description" content="検索パターンと数値を入力するだけで、にゃんこ大戦争のステータスを変更するLuaスクリプトを簡単・自動生成。面倒なオフセット計算は不要で、GameGuardian用のチートコードをすぐに作成できます。">
