--- a/ログイン.html
+++ b/ログイン.html
@@ -6,6 +6,9 @@
     <meta name="description" content="くらむぼんのホームページのログイン・新規登録ページです。アカウントを作成して、限定コンテンツにアクセスしましょう。">
     <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://script.google.com https://script.googleusercontent.com;">
     <title>ログイン・新規登録 - くらむぼんのホームページ</title>
+    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
+    <!-- iPhoneやiPadでホーム画面に追加したとき用のアイコン -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <style>
         :root { 
             --primary-color: #98FB98; 
