--- a/開発者について.html
+++ b/開発者について.html
@@ -8,6 +8,9 @@
     <meta name="description" content="ウェブサイト開発者「くらむぼん」のプロフィールページです。ADHDの当事者であり、YouTubeでの活動についても紹介しています。">
 
     <title>開発者について - くらむぼんのホームページ</title>
+    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
+    <!-- iPhoneやiPadでホーム画面に追加したとき用のアイコン -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     
     <style>
         /* === 基本設定 === */
