--- a/ログイン.html
+++ b/ログイン.html
@@ -6,7 +6,12 @@
     <meta name="description" content="くらむぼんのホームページのログイン・新規登録ページです。アカウントを作成して、限定コンテンツにアクセスしましょう。">
     <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://script.google.com https://script.googleusercontent.com;">
     <title>ログイン・新規登録 - くらむぼんのホームページ</title>
-    <style>
+
+    <!-- ファイル名は変更していません -->
+    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="チャンネルアイコン.jpg">
+ 
+ <style>
         :root { 
             --primary-color: #98FB98; 
             --secondary-color: #2E8B57; 
@@ -110,7 +115,7 @@
     </main>
 
     <script>
-        const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyFQ8bMDhw9fRVt_2uwMlXcpdSqo4rHbXtKVs_rgf6RjLwIysTxM4HsqH4hEjG3BSc9/exec';
+        const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbweFN798v3amYgXHH8ej9TM8RwdadPAvvIImYTwMADpbvzj7jFT6nG9-mcRavBABqSZ/exec';
         const LOGGED_IN_PAGE = 'にゃんこ大戦争.html';
         
         // --- DOM要素の取得 ---
