--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <p>ここでは、私が趣味で作成したゲーム用の便利ツールやLuaスクリプトを配布しています。<strong>ブロスタ</strong>の戦績管理ツールや、<strong>にゃんこ大戦争</strong>のデータ整理に役立つスクリプトなどを不定期で更新予定です。</p>
                 <p>プログラミングの知識を活かして、ゲームプレイがもっと楽しく、効率的になるようなものを目指しています。</p>
                 <h3>スクリプトの利用について</h3>
-                <p>配布しているスクリプトは、<a href="Lua_editor.html">Lua editor</a>などの実行環境でご利用いただけます。各スクリプトの使い方は、配布ページにて詳しく説明します。</p>
+                <p>配布しているスクリプトは、<a href="にゃんこ大戦争.html">ステータス編集</a>などの実行環境でご利用いただけます。各スクリプトの使い方は、配布ページにて詳しく説明します。</p>
                 <details>
                     <summary>配布されているスクリプトは安全ですか？</summary>
                     <div class="faq-answer">
