--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <meta name="keywords" content="くらむぼん, YouTube, ブロスタ, にゃんこ大戦争, LINE BOT, スクリプト, 配布, プログラミング, Lua, ゲームツール">
     <link rel="canonical" href="https://nyankohack.tokyo/">
     
-    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="チャンネルアイコン.jpg">
+    <!-- ▼▼▼ アイコン設定の修正 ▼▼▼ -->
+    <!-- ファイル名は半角英数字に変更し、様々な形式に対応できるよう複数指定 -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <!-- ▲▲▲ アイコン設定の修正 ▲▲▲ -->
 
     <!-- OGP (SNS共有) タグ -->
     <meta property="og:url" content="https://nyankohack.tokyo/">
@@ -17,13 +21,17 @@
     <meta property="og:title" content="くらむぼん公式サイト｜ゲーム用スクリプト配布とツール開発">
     <meta property="og:description" content="ブロスタやにゃんこ大戦争で使える自作スクリプトを配布中！LINE BOT開発やYouTube活動も行っています。">
     <meta property="og:site_name" content="くらむぼん公式サイト">
-    <meta property="og:image" content="https://nyankohack.tokyo/チャンネルアイコン.jpg">
+    <!-- ▼▼▼ 画像パスの修正 ▼▼▼ -->
+    <meta property="og:image" content="https://nyankohack.tokyo/profile-icon.jpg">
+    <!-- ▲▲▲ 画像パスの修正 ▲▲▲ -->
 
     <!-- Twitterカード タグ -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="くらむぼん公式サイト">
     <meta name="twitter:description" content="ブロスタ・にゃんこ大戦争のスクリプト配布やLINE BOT開発情報を発信中！">
-    <meta name="twitter:image" content="https://nyankohack.tokyo/チャンネルアイコン.jpg">
+    <!-- ▼▼▼ 画像パスの修正 ▼▼▼ -->
+    <meta name="twitter:image" content="https://nyankohack.tokyo/profile-icon.jpg">
+    <!-- ▲▲▲ 画像パスの修正 ▲▲▲ -->
 
     <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://script.google.com https://script.googleusercontent.com;">
 
@@ -40,7 +48,7 @@
             "https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA"
           ],
           "knowsAbout": ["Brawl Stars", "The Battle Cats", "Game", "Programming", "LINE BOT Development", "Scripting", "Lua"],
-          "image": "https://nyankohack.tokyo/チャンネルアイコン.jpg"
+          "image": "https://nyankohack.tokyo/profile-icon.jpg"
         },
         {
           "@type": "WebSite",
@@ -152,7 +160,9 @@
                 </nav>
                 <div class="profile-container">
                     <a href="https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA" target="_blank" rel="noopener noreferrer" class="profile-link">
-                        <img src="チャンネルアイコン.jpg" alt="くらむぼんのYouTubeチャンネルアイコン" width="200" height="200" fetchpriority="high">
+                        <!-- ▼▼▼ 画像パスの修正 ▼▼▼ -->
+                        <img src="profile-icon.jpg" alt="くらむぼんのYouTubeチャンネルアイコン" width="200" height="200" fetchpriority="high">
+                        <!-- ▲▲▲ 画像パスの修正 ▲▲▲ -->
                     </a>
                     <div class="explain">
                         <p>はじめまして、<strong>くらむぼん</strong>です。<br>ゲーム（特にブロスタやにゃんこ大戦争）とプログラミングが好きで、その二つを軸に活動しています。</p>
@@ -194,7 +204,9 @@
                 <h2 id="bot-title">文章暗号化BOT</h2>
                 <div class="profile-container">
                     <a href="https://line.me/R/ti/p/@630pniaf" target="_blank" rel="noopener noreferrer" class="profile-link">
-                        <img src="暗号化BOTアイコン.jpg" alt="LINE 文章暗号化BOTのアイコン" width="200" height="200" fetchpriority="high">
+                        <!-- ▼▼▼ 画像パスの修正 ▼▼▼ -->
+                        <img src="bot-icon.jpg" alt="LINE 文章暗号化BOTのアイコン" width="200" height="200" fetchpriority="high">
+                        <!-- ▲▲▲ 画像パスの修正 ▲▲▲ -->
                     </a>
                     <div class="explain">
                         <h3>プライベートな会話を守る</h3>
