--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -6,8 +6,8 @@
     <title>利用規約 - くらむぼん公式サイト</title>
     <meta name="robots" content="noindex">
     <link rel="canonical" href="https://nyankohack.tokyo/terms-of-service.html">
-    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="チャンネルアイコン.jpg">
+    <link rel="icon" type="image/png" href="profile-icon.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="profile-icon.jpg">
     <style>
         :root { 
             --primary-color: #98FB98; --secondary-color: #2E8B57; --bg-color: #F0FFF0; 
