--- a/にゃんこ大戦争.html
+++ b/にゃんこ大戦争.html
@@ -6,8 +6,8 @@
     <title>【Luaコード生成】にゃんこ大戦争 ステータスエディタ v4.0 | 簡単チートコード作成</title>
     
     <!-- ファイル名は変更していません -->
-    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="チャンネルアイコン.jpg">
+    <link rel="icon" type="image/png" href="profile-icon.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="profile-icon.jpg">
 
     <meta name="description" content="検索パターンと数値を入力するだけで、にゃんこ大戦争のステータスを変更するLuaスクリプトを簡単・自動生成。GameGuardian用のチートコードを作成できます。">
    
