--- a/ログイン.html
+++ b/ログイン.html
@@ -8,8 +8,8 @@
     <title>ログイン・新規登録 - くらむぼんのホームページ</title>
 
     <!-- ファイル名は変更していません -->
-    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="チャンネルアイコン.jpg">
+    <link rel="icon" type="image/png" href="profile-icon.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="profile-icon.jpg">
  
  <style>
         :root { 
