--- a/開発者について.html
+++ b/開発者について.html
@@ -8,8 +8,8 @@
     <link rel="canonical" href="https://nyankohack.tokyo/開発者について.html">
 
     <!-- ファイル名はご指定の通り変更していません -->
-    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="チャンネルアイコン.jpg">
+    <link rel="icon" type="image/png" href="profile-icon.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="profile-icon.jpg">
     
     <style>
         :root {
@@ -61,7 +61,7 @@
             </div>
             <hr class="divider">
             <div class="link-section">
-                <img src="チャンネルアイコン.jpg" alt="チャンネルアイコン" width="100" height="100" fetchpriority="high">
+                <img src="profile-icon.jpg" alt="チャンネルアイコン" width="100" height="100" fetchpriority="high">
                 <div class="link-content">
                     <h2>YouTubeチャンネル</h2>
                     <a href="https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA?si=SZ7U0PjuVURPrfOl" target="_blank" rel="noopener noreferrer" class="nav-btn">
