--- a/Lua_editor.html
+++ b/Lua_editor.html
@@ -8,7 +8,7 @@
     <meta name="description" content="GameGuardian（GG）用のLuaスクリプトをステップ・バイ・ステップで簡単に生成できるツールです。値の検索からリファイン、書き換えまでをサポートします。">
     
     <title>Lua Editor - GGコードジェネレーター</title>
-    <link rel="icon" type="image/png" href="チャンネルアイコン.jpg">
+    <link rel="icon" type="image/png" href="profile-icon.jpg">
     <!-- iPhoneやiPadでホーム画面に追加したとき用のアイコン -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <style>
