--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <h3>YouTube活動 (2023年〜)</h3>
                         <p>主にブロスタのプレイ動画や攻略情報を発信。ハイレベルなプレイから、面白い企画まで幅広く投稿中です。</p>
                         <h3>ブロスタのプロフィール</h3>
-                        <p>総トロフィーは74000以上、パワーリーグの最高ランクはマスターⅠです。皆さんと一緒にブロスタを楽しみたいです！</p>
+                        <p>総トロフィーは74000以上、最高ランクはマスターⅠです。皆さんと一緒にブロスタを楽しみたいです！</p>
                     </div>
                 </div>
                 <div class="divider"></div>
