--- a/Lua_editor.html
+++ b/Lua_editor.html
@@ -9,6 +9,8 @@
     
     <title>Lua Editor - GGコードジェネレーター</title>
     <link rel="icon" type="image/png" href="profile-icon.jpg">
+     <link rel="icon" href="profile-icon.jpg">
+
     <!-- iPhoneやiPadでホーム画面に追加したとき用のアイコン -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <style>
