--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="32x32" href="blog-icon.jpg">
     <link rel="apple-touch-icon" href="blog-icon.jpg">
+     <link rel="icon" href="profile-icon.jpg">
+
     <!-- ▲▲▲ アイコン設定 ▲▲▲ -->
 
     <!-- OGP (SNS共有) タグ -->
