--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="description" content="くらむぼんの公式サイト。趣味で開発したブロスタやにゃんこ大戦争で使えるスクリプトの配布、LINE「文章暗号化BOT」の情報を発信。YouTubeでのゲーム実況も。">
     <meta name="keywords" content="くらむぼん, YouTube, ブロスタ, にゃんこ大戦争, LINE BOT, スクリプト, 配布, プログラミング, Lua, ゲームツール">
     <link rel="canonical" href="https://nyankohack.tokyo/">
+
     
     <!-- ▼▼▼ アイコン設定の修正 ▼▼▼ -->
     <!-- ファイル名は半角英数字に変更し、様々な形式に対応できるよう複数指定 -->
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="profile-icon.jpg" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="profile-icon.jpg">
+    <link rel="apple-touch-icon" href="profile-icon.jpg">
+     <link rel="icon" href="profile-icon.jpg">
+
     <!-- ▲▲▲ アイコン設定の修正 ▲▲▲ -->
 
     <!-- OGP (SNS共有) タグ -->
