--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プライバシーポリシー - くらむぼん公式サイト</title>
-    <meta name="robots" content="noindex"> <!-- 検索エンジンにインデックスさせない -->
+     <link rel="icon" href="profile-icon.jpg">
+
     <link rel="canonical" href="https://nyankohack.tokyo/privacy-policy.html">
     <link rel="icon" type="image/png" href="profile-icon.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="profile-icon.jpg">
