--- a/ログイン.html
+++ b/ログイン.html
@@ -10,6 +10,8 @@
     <!-- ファイル名は変更していません -->
     <link rel="icon" type="image/png" href="profile-icon.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="profile-icon.jpg">
+     <link rel="icon" href="profile-icon.jpg">
+
  
  <style>
         :root { 
