--- a/記事1.html
+++ b/記事1.html
@@ -15,6 +15,8 @@
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+     <link rel="icon" href="profile-icon.jpg">
+
     <!-- ▲▲▲ アイコン設定 ▲▲▲ -->
 
     <!-- OGP (SNS共有) タグ -->
