--- a/記事1.html
+++ b/記事1.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ▼▼▼ 記事のタイトルに合わせて変更 ▼▼▼ -->
-    <title>ここに記事のタイトルを入力｜くらむぼん公式サイト</title>
-    <meta name="description" content="ここに記事の簡単な説明（ディスクリプション）を入力します。">
+    <title>Lua解析防止方法｜くらむぼん公式サイト</title>
+    <meta name="description" content="Lua解析防止方法">
     <!-- ▲▲▲ 記事のタイトルに合わせて変更 ▲▲▲ -->
     
     <meta name="keywords" content="キーワード1, キーワード2, くらむぼん">
-    <link rel="canonical" href="https://nyankohack.tokyo/article1.html"> <!-- ← ファイル名に合わせて変更 -->
+    <link rel="canonical" href="https://nyankohack.tokyo/記事1.html"> <!-- ← ファイル名に合わせて変更 -->
     
     <!-- ▼▼▼ アイコン設定 ▼▼▼ -->
     <link rel="icon" href="/favicon.ico" sizes="any">
@@ -20,17 +20,17 @@
     <!-- ▲▲▲ アイコン設定 ▲▲▲ -->
 
     <!-- OGP (SNS共有) タグ -->
-    <meta property="og:url" content="https://nyankohack.tokyo/article1.html"> <!-- ← ファイル名に合わせて変更 -->
+    <meta property="og:url" content="https://nyankohack.tokyo/記事1.html"> <!-- ← ファイル名に合わせて変更 -->
     <meta property="og:type" content="article">
-    <meta property="og:title" content="ここに記事のタイトルを入力｜くらむぼん公式サイト">
-    <meta property="og:description" content="ここに記事の簡単な説明（ディスクリプション）を入力します。">
+    <meta property="og:title" content="Lua解析防止方法｜くらむぼん公式サイト">
+    <meta property="og:description" content="Lua解析防止方法">
     <meta property="og:site_name" content="くらむぼん公式サイト">
     <meta property="og:image" content="https://nyankohack.tokyo/profile-icon.jpg">
 
     <!-- Twitterカード タグ -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="ここに記事のタイトルを入力｜くらむぼん公式サイト">
-    <meta name="twitter:description" content="ここに記事の簡単な説明（ディスクリプション）を入力します。">
+    <meta name="twitter:title" content="Lua解析防止方法｜くらむぼん公式サイト">
+    <meta name="twitter:description" content="Lua解析防止方法">
     <meta name="twitter:image" content="https://nyankohack.tokyo/profile-icon.jpg">
 
     <style>
