--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                     <a href="ログイン.html" class="nav-btn">ステータス編集</a>
                     <a href="開発者について.html" class="nav-btn">開発者について</a>
                     <a href="Lua_editor.html" class="nav-btn">Lua editor</a>
+                    <a href="blog.html" class="nav-btn">Luaブログ</a>
                 </nav>
                 <div class="profile-container">
                     <a href="https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA" target="_blank" rel="noopener noreferrer" class="profile-link">
