--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                     <a href="開発者について.html" class="nav-btn">開発者について</a>
                     <a href="Lua_editor.html" class="nav-btn">Lua editor</a>
                     <a href="blog.html" class="nav-btn">Luaブログ</a>
+                    <a href="ブロスタブログ.html" class="nav-btn">ブロスタブログ</a>
                 </nav>
                 <div class="profile-container">
                     <a href="https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA" target="_blank" rel="noopener noreferrer" class="profile-link">
@@ -176,6 +177,8 @@
                         <p>主にブロスタのプレイ動画や攻略情報を発信。ハイレベルなプレイから、面白い企画まで幅広く投稿中です。</p>
                         <h3>ブロスタのプロフィール</h3>
                         <p>総トロフィーは74000以上、最高ランクはマスターⅠです。皆さんと一緒にブロスタを楽しみたいです！</p>
+                        <h3>ブロスタブログ</h3>
+                        <a href="ブロスタブログ.html" class="nav-btn">ブロスタブログ</a>
                     </div>
                 </div>
                 <div class="divider"></div>
