--- a/ブロスタ記事1.html
+++ b/ブロスタ記事1.html
@@ -147,7 +147,7 @@ _:-ms-lang(x), #wpdcom.wpd-layout-3 .wpd-comment.wpd-reply .wpd-comment-footer .
 
                     <h2 class="c-secTitle">ブロスタ最強キャラティア表</h2>
                     <div class="p-articleThumb">
-                        <img class="p-articleThumb__img" src="ブロスタティア表.webp" alt="ブロスタティア表" width="600">
+                        <img class="p-articleThumb__img" src="ブロスタティア表.png" alt="ブロスタティア表" width="600">
                     </div>
                     <p class="bstl-note">※上記ティア表はあくまで目安です。マップやチーム編成によって評価は変動します。</p>
 
