--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                     <a href="Lua_editor.html" class="nav-btn">Lua editor</a>
                     <a href="blog.html" class="nav-btn">Luaブログ</a>
                     <a href="ブロスタブログ.html" class="nav-btn">ブロスタブログ</a>
+                    <a href="脱獄ごっこブログ.html" class="nav-btn">脱獄ごっこブログ</a>
                 </nav>
                 <div class="profile-container">
                     <a href="https://youtube.com/channel/UCTvT5704yfXyBjzFoWSg0CA" target="_blank" rel="noopener noreferrer" class="profile-link">
