--- a/脱獄ごっこ記事1.html
+++ b/脱獄ごっこ記事1.html
@@ -140,7 +140,8 @@
                     <h3>3. 新マップの登場</h3>
                     <p>既存のマップに加え、Switch版のために調整された新マップも登場するとのこと。大画面で遊ぶ脱獄ごっこの世界は新鮮に感じられそうです。</p>
 
-                    <h3>4. コンボ技の復活！</h3>
+                    <h3>4. コンボ技の復活！</h3><br>
+                    <img src="Screenshot_20251122-184453.png" alt="画像" width="100%">
                     <p>運営は脱獄ごっこPROで消したコンボを復活させると発表しました。爽快感を楽しめるあの頃の脱獄ごっこが返ってくる感じがします。</p>
 
                     <h2>脱獄ごっこPROとの関係は？</h2>
