--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>くらむぼん公式サイト｜ブロスタ・にゃんこ大戦争のスクリプト配布とLINE BOT開発</title>
+    <title>くらむぼん公式サイト</title>
     <meta name="description" content="くらむぼんの公式サイト。趣味で開発したブロスタやにゃんこ大戦争で使えるスクリプトの配布、LINE「文章暗号化BOT」の情報を発信。YouTubeでのゲーム実況も。">
     <meta name="keywords" content="くらむぼん, YouTube, ブロスタ, にゃんこ大戦争, LINE BOT, スクリプト, 配布, プログラミング, Lua, ゲームツール">
     <link rel="canonical" href="https://nyankohack.tokyo/">
