--- a/脱獄ごっこ記事1.html
+++ b/脱獄ごっこ記事1.html
@@ -143,6 +143,16 @@
                     <h3>4. コンボ技の復活！</h3><br>
                     <img src="Screenshot_20251122-184453.png" alt="画像" width="100%">
                     <p>運営は脱獄ごっこPROで消したコンボを復活させると発表しました。爽快感を楽しめるあの頃の脱獄ごっこが返ってくる感じがします。</p>
+                    <h3>【実際のプレイ映像】</h3><br>
+                    <div style="position:relative;width:100%;padding-bottom:56.25%;overflow:hidden;">
+  <iframe
+    src="https://www.youtube.com/embed/f6Up11skNL8?start=2363"
+    title="YouTube video player"
+    style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
 
                     <h2>脱獄ごっこPROとの関係は？</h2>
                     <p>現在配信中の『脱獄ごっこPRO』はどうなるの？と心配な方もいるかもしれませんが、ご安心ください。</p>
