--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <a href="ログイン.html" class="nav-btn">ステータス編集</a>
                     <a href="開発者について.html" class="nav-btn">開発者について</a>
                     <a href="Lua_editor.html" class="nav-btn">Lua editor</a>
-                    <a href="blog.html" class="nav-btn">Luaブログ</a>
+                    <a href="Luaブログ.html" class="nav-btn">Luaブログ</a>
                     <a href="ブロスタブログ.html" class="nav-btn">ブロスタブログ</a>
                     <a href="脱獄ごっこブログ.html" class="nav-btn">脱獄ごっこブログ</a>
                 </nav>
@@ -200,7 +200,7 @@
             <section class="widget" id="bot-section" aria-labelledby="bot-title">
                 <h2 id="bot-title">ブログ</h2>
                 <div class="profile-container">
-                    <a href="blog.html" target="_blank" rel="noopener noreferrer" class="profile-link">
+                    <a href="Luaブログ.html" target="_blank" rel="noopener noreferrer" class="profile-link">
                         <!-- ▼▼▼ 画像パスの修正 ▼▼▼ -->
                         <img src="blog-icon.jpg" alt="ブログ" width="200" height="200" fetchpriority="high">
                         <!-- ▲▲▲ 画像パスの修正 ▲▲▲ -->
