--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                     <a href="Lua_editor.html" class="nav-btn">Lua editor</a>
                     <a href="Luaブログ.html" class="nav-btn">Luaブログ</a>
                     <a href="ブロスタブログ.html" class="nav-btn">ブロスタブログ</a>
+                    <a href="ブロスタデータベース.html" class="nav-btn">ブロスタ名前検索</a>
                     <a href="脱獄ごっこブログ.html" class="nav-btn">脱獄ごっこブログ</a>
                 </nav>
                 <div class="profile-container">
